--- a/Index.html
+++ b/Index.html
@@ -240,6 +240,15 @@
         
     </style>
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QSNV5TPX3V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QSNV5TPX3V');
+</script>
 <body>
     <header>
         <nav id="navbar">
